--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all contributors to the repository.
 
-Frederic Bourouliou <frederic.bourouliou@gmail.com> 
+Frederic Bourouliou <bourouliou@gmail.com> 
